--- a/index.html
+++ b/index.html
@@ -707,6 +707,38 @@
     </div>
 </section>
 
+<section class="partners">
+    <div class="container">
+        <div class="swiper-partners swiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <img src="img/partners/1-160x115.png">
+                </div>
+                <div class="swiper-slide">
+                    <img src="img/partners/2-160x115.png">
+                </div>
+                <div class="swiper-slide">
+                    <img src="img/partners/3-160x115.png">
+                </div>
+                <div class="swiper-slide">
+                    <img src="img/partners/4-160x115.png">
+                </div>
+                <div class="swiper-slide">
+                    <img src="img/partners/5-160x115.png">
+                </div>
+                <div class="swiper-slide">
+                    <img src="img/partners/6-160x115.png">
+                </div>
+                <div class="swiper-slide">
+                    <img src="img/partners/7-160x115.png">
+                </div>
+            </div>
+        </div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+    </div>
+</section>
+
 </body>
 </html>
 <script src="js/script.js"></script>
