--- a/index.html
+++ b/index.html
@@ -739,6 +739,49 @@
     </div>
 </section>
 
+<footer>
+    <div class="container footer-blocks">
+        <div class="footer-block">
+            <h5>Information</h5>
+            <ul class="footer-list">
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Delivery Information</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Terms & Conditions</a></li>
+                <li><a href="#">Contact Us</a></li>
+            </ul>
+        </div>
+        <div class="footer-block">
+            <h5>My Account</h5>
+            <ul class="footer-list">
+                <li><a href="#">My Account</a></li>
+                <li><a href="#">Order History</a></li>
+                <li><a href="#">Wish List</a></li>
+                <li><a href="#">Affiliates</a></li>
+                <li><a href="#">Newsletter</a></li>
+            </ul>
+        </div>
+
+        <div class="footer-block">
+            <h5>Store information</h5>
+            <ul class="footer-list">
+                <li class="footer-location">Summer - Juice Store United States</li>
+                <li class="footer-mail">test@gmail.com</li>
+                <li class="footer-address">+375 (29) 123-45-67</li>
+            </ul>
+        </div>
+
+        <div class="footer-block">
+            <h5><span class="icon-mail4"></span>Sign Up For Newsletter</h5>
+            <p>Sign up with us and get latest deals, offers & updates about store.</p>
+            <div class="footer-news">
+                <input type="email" placeholder="Enter Your Email" class="news-input">
+                <a class="button" href="#">Subscribe</a>
+            </div>
+        </div>
+    </div>
+</footer>
+
 </body>
 </html>
 <script src="js/script.js"></script>
