creating a menu for a computer

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/config.css">
     <link rel="stylesheet" type="text/css" href="css/swiper.css">
     <link rel="stylesheet" type="text/css" href="css/resources.css">
+    <link rel="stylesheet" type="text/css" href="css/menu.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="js/jquery-2.1.1.min.js"></script>
     <script src="js/parallax.js"></script>
@@ -28,14 +29,49 @@
                     <li>
                         <a href="#">Drinks <span class="icon-cheveron-up"></span></a>
                         <div class="dropdown-menu">
+                            <div class="dropdown-menu__column">
+                                <h5><a href="#">Lemonade</a></h5>
+                                <ul>
+                                    <li><a href="#">Honeydew Ice</a></li>
+                                    <li><a href="#">PB Frappe</a></li>
+                                    <li><a href="#">Sake Spritzer</a></li>
+                                    <li><a href="#">Trout</a></li>
+                                </ul>
+                            </div>
 
+                            <div class="dropdown-menu__column">
+                                <h5><a href="#">Ice Cones</a></h5>
+                                <ul>
+                                    <li><a href="#">Choco Browie</a></li>
+                                    <li><a href="#">Cookies & Creams</a></li>
+                                    <li><a href="#">Cornetto Chokiss</a></li>
+                                    <li><a href="#">Dark Chocolate</a></li>
+                                </ul>
+                            </div>
+
+                            <div class="dropdown-menu__column">
+                                <h5><a href="#">Scoops</a></h5>
+                                <ul>
+                                    <li><a href="#">Butter Scotch</a></li>
+                                    <li><a href="#">Plain Pista</a></li>
+                                    <li><a href="#">Strawberry</a></li>
+                                    <li><a href="#">Vanilla</a></li>
+                                </ul>
+                            </div>
                         </div>
                     </li>
 
                     <li>
                         <a href="#">Flavours <span class="icon-cheveron-up"></span></a>
-                        <div class="dropdown-menu">
-
+                        <div class="dropdown-menu simple-menu">
+                            <div class="dropdown-menu__column">
+                                <ul>
+                                    <li><a href="#">Badam Roasted</a></li>
+                                    <li><a href="#">Butterscotch</a></li>
+                                    <li><a href="#">Kesar Pista</a></li>
+                                    <li><a href="#">Vanilla Mini</a></li>
+                                </ul>
+                            </div>
                         </div>
                     </li>
 
@@ -45,15 +81,45 @@
 
                     <li>
                         <a href="#">Juices <span class="icon-cheveron-up"></span></a>
-                        <div class="dropdown-menu">
-
+                        <div class="dropdown-menu simple-menu">
+                            <div class="dropdown-menu__column">
+                                <ul>
+                                    <li><a href="#">Apple Juice</a></li>
+                                    <li class="open-submenu"><a href="#">Beet Juice <span class="icon-cheveron-up"></span></a>
+                                        <div class="dropdown-menu simple-menu submenu">
+                                            <div class="dropdown-menu__column">
+                                                <ul>
+                                                    <li><a href="#">Mango Juice</a></li>
+                                                    <li><a href="#">Watermelon Juice</a></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li><a href="#">Orange Juice</a></li>
+                                    <li><a href="#">Peach fizz</a></li>
+                                    <li><a href="#">Pineapple punch</a></li>
+                                </ul>
+                            </div>
                         </div>
                     </li>
 
                     <li>
                         <a href="#">More <span class="icon-cheveron-up"></span></a>
-                        <div class="dropdown-menu">
-
+                        <div class="dropdown-menu simple-menu">
+                            <div class="dropdown-menu__column">
+                                <ul>
+                                    <li><a href="#">Breakfast Smoothie</a></li>
+                                    <li><a href="#">Cucumber Juice</a></li>
+                                    <li><a href="#">Green Juice</a></li>
+                                    <li><a href="#">Strawberry Smoothie</a></li>
+                                    <li><a href="#">Grape juice</a></li>
+                                    <li><a href="#">Orange Juice</a></li>
+                                    <li><a href="#">Cantaloupe Juice</a></li>
+                                    <li><a href="#">Cranberry Juice</a></li>
+                                    <li><a href="#">Dates Smoothie</a></li>
+                                    <li><a href="#">Blogs</a></li>
+                                </ul>
+                            </div>
                         </div>
                     </li>
                 </ul>
