removed the ad block

--- a/index.html
+++ b/index.html
@@ -531,21 +531,21 @@
     </div>
 </section>
 
-<section class="advertising-block">
+<section class="interactive-block">
     <div class="container flex">
-        <div class="advertising">
-            <img src="img/advertising-block/cms-banner-1.jpg">
-            <div class="advertising-text advertising-text__left">
-                <div class="advertising-text__title">The Juice Bar Smoothie</div>
-                <div class="advertising-text__shop"><a class="button button-inversion" href="#">shop now</a></div>
+        <div class="interactive">
+            <img src="img/interactive-block/cms-banner-1.jpg">
+            <div class="interactive-text interactive-text__left">
+                <div class="interactive-text__title">The Juice Bar Smoothie</div>
+                <div class="interactive-text__shop"><a class="button button-inversion" href="#">shop now</a></div>
             </div>
         </div>
 
-        <div class="advertising">
-            <img src="img/advertising-block/cms-banner-2.jpg">
-            <div class="advertising-text advertising-text__right">
-                <div class="advertising-text__title">Fresh Made Fresh Juice</div>
-                <div class="advertising-text__offer-title">Get Flate 30% OFF</div>
+        <div class="interactive">
+            <img src="img/interactive-block/cms-banner-2.jpg">
+            <div class="interactive-text interactive-text__right">
+                <div class="interactive-text__title">Fresh Made Fresh Juice</div>
+                <div class="interactive-text__offer-title">Get Flate 30% OFF</div>
             </div>
         </div>
     </div>
