building the project using webpack

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="js/jquery-2.1.1.min.js"></script>
     <script src="js/parallax.js"></script>
-    <script src="js/swiper.js"></script>
 </head>
 <body>
 <div class="top_site">
@@ -1183,4 +1182,4 @@
 
 </body>
 </html>
-<script src="js/script.js"></script>
+<script src="dist/script.js"></script>
